src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");

@layer utilities {
  @variants responsive {
    .cardPadding {
      padding-left: 12%;
      padding-right: 12%;
    }
    .centerLogo {
      position: absolute;
      /* top: 50%; */
      left: 50%;
      transform: translate(-50%);
    }
    .rightLogo {
      position: absolute;
      right: 13%;
      transform: none;
      left: unset;
    }
    .pinDesktop {
      max-width: 60px;
    }
    .pinMobile {
      max-width: 40px;
    }
    .aboutPin {
      max-width: 15%;
    }
    .aboutPinDesktop {
      max-width: 120px;
    }
    .footerBackgroundDesktop {
      background: url("../images/footer.jpg") no-repeat;
      background-size: cover;
    }
    .footerBackgroundMobile {
      background: url("../images/mobileFooter.jpg") no-repeat;
      background-size: cover;
    }
    .whoWeAreBgRight{
      background-position: right !important;
    }
    .whoWeAreBgCenter{
      background-position: center !important;
    }
  }
}

/* Box Model Hack */
* {
  box-sizing: border-box;
}

.flexThisBox {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.main {
  flex: 1 0 auto;
}

/* Clear fix hack */
.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.clear {
  clear: both;
}

a {
  text-decoration: none;
}

/******************************************
/* BASE STYLES
/*******************************************/

html {
  font-size: 12px;
  scroll-behavior: smooth;
}

body {
  line-height: 1.4;
  font-family: "Poppins", "Lato", "Garamond";
}

html,
body {
  max-width: 100% !important;
}

/******************************************
/* GLOBAL LAYOUT
/*******************************************/

/** NAV **/

.navMenu {
  display: flex;
  color: inherit;
}

.nav-item {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
}
.navClear {
  transition: all 0.5s ease-in;
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 1) 80%,
    transparent 100%
  );
  color: white;
}

.navBg {
  transition: all 0.5s ease-in;
  background: white !important;
  mask-image: none;
  border-bottom: 3px solid red;
}

.logoShadow {
  filter: drop-shadow(2px 2px 2px black);
}

.mobileNav {
  height: 110vh !important;
  width: 100vw !important;
  background-color: blue;
  flex-direction: column;
}
@media only screen and (min-width: 768px) {
  .parent:hover .child {
    opacity: 1;
    height: auto;
    overflow: none;
    transform: translateY(0);
  }
  .child {
    opacity: 0;
    height: 0;
    overflow: hidden;
    transform: translateY(-10%);
  }
}

.navLink {
  color: black !important;
}

.navLink-drop {
  color: black;
}

.navLink:hover,
.navLink:active {
  color: salmon;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

/* Home */
.react-rotating-text-cursor {
  animation: blinking-cursor 0.8s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s
    infinite;
  color: black;
  font-weight: 200;
}

@keyframes blinking-cursor {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

/* HERO */

.homeHero {
  background: transparent;
  margin-bottom: "25%";
}

.hero {
  height: 100vh;
  width: 100%;
  background: transparent;
  margin-bottom: "25%";
}

/* /////////////////////////// */

/* Latest Trained */
.latestTrained {
  min-height: 70vh;
  width: 100vw;
  background-color: transparent;
}

/* ///////////////////////////////////// */

/* WHAT WE DO SECTION */

.blog {
  color: rgb(25, 76, 142);
}

.whatWeDo {
  padding-top: 35%;
  padding-bottom: 30%;
}

.blobTop {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.tabTitles {
  color: rgb(157, 181, 205);
}

.tabButton {
  color: rgb(157, 181, 205);
}

.textTab {
  font-size: 100%;
}

.borderBottom {
  border-bottom-width: 1px;
}

.fontTitle {
  font-family: Poppins;
}

.card-img-top {
  width: fit-content;
}

.readLink {
  margin-right: 44%;
  color: #f8f6f6;
}

.blogCard {
  padding-bottom: 15%;
}

.unicornSpark {
  width: 19%;
  float: right;
  margin-top: 10%;
}

/* Category Search Bar */

.searchButton{
  color: white;
  @apply absolute top-0 right-0 p-2 bg-red-500 font-bold text-2xl rounded-xl h-full flex justify-center items-center w-1/6;
}
.borderColor {
  border-color: rgb(124, 154, 192);
}

.dropBorder{
  border-color: rgb(124, 154, 192);
}

.searchText {
  font-size: small;
  color: black
}


/* ////////////////////////// */

/* About */

.aboutHero {
  height: 85vh;
}

.aboutSection h2 {
  background: -webkit-linear-gradient( rgba(30, 58, 138), rgba(19, 85, 207, 0.777));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  @apply h-full;
}

.valueImg{
  content: url('../images/about/values.png')
}

.engineeringImg{
  content: url('../images/about/engineering.png')
}


.peopleImg{
  content: url('../images/about/people.png')
}

.evolutionImg{
  content: url('../images/about/evolution.png')
}

.communicationImg{
  content: url('../images/about/communication.png')
}


@media screen and (max-width: 635px) {
  /* .imageContainer {
    @apply px-32;
  } */
}
/* ////////////////////////// */

/* Contact */

.contactCard {
  background-color: rgb(13, 51, 100);
  margin-top: 15%;
}

.contactHeight {
  /* height: "110vh"; */
}

.contact input {
  height: 48px;
  font-size: 15px;
  outline: none;
  background-color: transparent;
  @apply pl-3 bg-white rounded-xl;
}

.contact select {
  height: 40px;
  border: none;
  border-bottom: 2px solid red;
  border-radius: 0;
  font-size: 15px;
}

.contact textarea {
  @apply pt-3 pl-3 bg-white rounded-xl;
  font-size: 15px;
  outline: none;
}

.contact input:focus,
.contact textarea:focus {
  @apply border-2 border-solid border-red-500 rounded-xl px-2;
}

/* Blog */

/*** Blog Posts **/
.postHeader {
  height: 35vh;
}

.postHeaderContainer {
  height: 100%;
  background: url(../images/blog/postHero.jpg) no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-attachment: scroll;
  background-position: center;
}

/* FOOTER */

.contact .socialsBox a {
  color: "red";
}
.socialsBox a {
  margin-right: 2%;
}

.socialsBox a:hover,
.footerLink:hover {
  color: rgb(33, 149, 243);
}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/
.blackBorder {
  border: 2px solid black;
}

.trainForBattle .card:hover {
  background: #fff;
  box-shadow: 0px 0px 10px rgba(218, 163, 163, 0.5);
  color: white;
  /* font-weight: bold; */
  cursor: pointer;
}

.latestTrained .card:hover {
  cursor: pointer;
  -webkit-transition: all 0.2s ease-in;
  -moz-transition: all 0.2s ease-in;
  -ms-transition: all 0.2s ease-in;
  -o-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
}

